; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/mm/extr_vmalloc.c_insert_vmalloc_vm.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/mm/extr_vmalloc.c_insert_vmalloc_vm.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vm_struct = type { i32 }
%struct.vmap_area = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.vm_struct*, %struct.vmap_area*, i64, i8*)* @insert_vmalloc_vm to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @insert_vmalloc_vm(%struct.vm_struct* %0, %struct.vmap_area* %1, i64 %2, i8* %3) #0 {
  %5 = alloca %struct.vm_struct*, align 8
  %6 = alloca %struct.vmap_area*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i8*, align 8
  store %struct.vm_struct* %0, %struct.vm_struct** %5, align 8
  store %struct.vmap_area* %1, %struct.vmap_area** %6, align 8
  store i64 %2, i64* %7, align 8
  store i8* %3, i8** %8, align 8
  %9 = load %struct.vm_struct*, %struct.vm_struct** %5, align 8
  %10 = load %struct.vmap_area*, %struct.vmap_area** %6, align 8
  %11 = load i64, i64* %7, align 8
  %12 = load i8*, i8** %8, align 8
  %13 = call i32 @setup_vmalloc_vm(%struct.vm_struct* %9, %struct.vmap_area* %10, i64 %11, i8* %12)
  %14 = load %struct.vm_struct*, %struct.vm_struct** %5, align 8
  %15 = call i32 @insert_vmalloc_vmlist(%struct.vm_struct* %14)
  ret void
}

declare dso_local i32 @setup_vmalloc_vm(%struct.vm_struct*, %struct.vmap_area*, i64, i8*) #1

declare dso_local i32 @insert_vmalloc_vmlist(%struct.vm_struct*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
